@@ -170,7 +170,7 @@ namespace Server.Misc
 				AddBackground( 0, 0, 160, 120, 5054 );
 
 				AddButton( 10, 10, 0xFB7, 0xFB9, 1, GumpButtonType.Reply, 0 );
-				AddLabel( 45, 10, 0x34, "RunUO.com" );
+				AddLabel( 45, 10, 0x34, "SunUO.org" );
 
 				AddButton( 10, 35, 0xFB7, 0xFB9, 2, GumpButtonType.Reply, 0 );
 				AddLabel( 45, 35, 0x34, "List of skills" );
@@ -186,9 +186,9 @@ namespace Server.Misc
 			{
 				switch ( info.ButtonID )
 				{
-					case 1: // RunUO.com
+					case 1: // SunUO.org
 					{
-						sender.LaunchBrowser( "http://www.RunUO.com" );
+						sender.LaunchBrowser( "http://www.SunUO.org" );
 						break;
 					}
 					case 2: // List of skills
