@@ -16,6 +16,7 @@ sunuo (0.3.2) unstable; urgency=low
     - removed DataPath.CustomPath
     - don't try to dns-resolve hostname, just use LocalEndPoint
     - test center switch is feature "test-center"
+    - launch www.sunuo.org instead of www.runuo.com
 
  --
 
